Mstone - version 4.x

2000-04-05  Dan Christian <robodan@netscape.com>
	* Fix bug in WMAP where the login field was reporting banner data.

	* Add a reconnect concept to WMAP.  This separates out the
	reconnect activity from the initial connections.  There is still a
	bug/feature that the reconnect increments an error which can
	eventually hit the maxErrors limit.  You have to record the error
	or else you could not get the "connections" graph right.
	
2000-03-31  Dan Christian <robodan@netscape.com>
	
	* Merged setup and mstone into one script to reduce command
	namespace polution.  "mstone setup" is the the same as "setup".

	* Made setup try to be more tolerant of OSes that were not
	include in the distribution.  SunOS 5.7 will fall back to 5.6.

	* Now package conf/general.wld.in and only copy to general.wld if
	there isn't one already in place.  This means that you can unpack
	new bits over old bits without blowing away your configuration.
	
	* Added <includeOnce file> command to workloads.  This allows
	tests to be used either as a stand alone or as part of another
	test (e.g. smtp).

	* Converted ChangeLog to more common formating

	* Spilt off old ChangeLog entries to ChangeLog.1 and ChangeLog.2